added initial auth check, sign up button

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
                 </div>
                 <div class="input_wrapper">
                     <button class="submit" id="submit">Submit</button>
+                    
+                </div>
+                <div class="input_wrapper sign_up_wrapper">
+                    <hr></hr>
+                    <span class="sign_up" id="sign_up"> SIGN UP</span>
                 </div>
             </div>
         </div>
