add register FE and BE with validation.

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
             <div class="form_wrapper">
                 <h1>LOGIN</h1>
                 <div class="input_wrapper">
-                    <span class="fieldName">Username</span>
-                    <input class="input username" id="username" type="text" placeholder="Input username"></input>
+                    <span class="fieldName">Email</span>
+                    <input class="input username" id="email" type="text" placeholder="Input email"></input>
                 </div>
                 <div class="input_wrapper no_bot_padding">
                     <span class="fieldName">Password</span>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="input_wrapper sign_up_wrapper">
                     <hr></hr>
-                    <span class="sign_up" id="sign_up"> SIGN UP</span>
+                    <span class="sign_up" id="sign_up" onClick="moveToRegister();"> SIGN UP</span>
                 </div>
             </div>
         </div>
