--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="index.js"> </script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script type="module" src="index.js"></script>
+    
 </body>
 </html>
